some-alignment fixes

--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -10,7 +10,7 @@
   <%= render 'shared/team-images'%>
   </section>
   <br>
-  <%= link_to 'Back', root_path, class: "btn blue button-custom" %>
+  <%= link_to 'Home', root_path, class: "btn blue button-custom" %>
   <br>
   <br>
 </div>
