updates to blog

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -2,7 +2,7 @@
   <br>
   <br>
   <div class="container">
-    <h2 class="services-bigtext">BisImpact is a great believer in knowledge sharing; our goal is to promote innovative thinking and share lessons with our wider community.</h2>
+    <h2 class="services-bigtext">BisImpact supports knowledge sharing; our goal is to promote innovative thinking and share lessons with our wider community.</h2>
   </div>
   <br>
   <%# This is where the blogs start   %>
