--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -26,13 +26,14 @@
   </a>
 </div>
 <div class="blockquote blog-big">
+<a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
   <br>
   <br>
-  <h1 class="text-center"> <%= @blog.header %></h1>
+  <div class="readable-blogtext">
+  <h2 class="bisimpact-bigtext"> <%= @blog.header %></h2>
   <h3 class="text-center"> <%= @blog.sub_header %></h3>
   <p class="text-center"><strong>Themes: </strong><%= @blog.hashtags %> </p>
   <br>
-  <div class="readable-blogtext">
   <p class="text-left"><%= simple_format(@blog.content)  %> </p>
   <br>
   </div>
