--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -1,6 +1,6 @@
 
 <div class=" text-center mt-5 wrap-videos">
-  <h2 class="services-bigtext">Courage and belief can yield unexpected outcomes</h2>
+  <h2 class="bisimpact-bigtext">Courage and belief can yield unexpected outcomes</h2>
   <br>
   <h3 class="main-col">The best pieces of advice in life unlock your full potential</h3>
   <br>
