--- a/app/views/staff/index.html.erb
+++ b/app/views/staff/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <br>
   <br>
-  <h1 class="services-bigtext">Experienced,
+  <h1 class="bisimpact-bigtext">Experienced,
   trusted experts</h1>
   <br>
   <h3 class="main-col">Our Team</h3>
