--- a/app/assets/stylesheets/blogs/_show.scss
+++ b/app/assets/stylesheets/blogs/_show.scss
@@ -2,3 +2,14 @@
   padding: 0px 70px 0px 70px;
   text-align: justify;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .readable-blogtext {
+    padding: 0px 40px 0px 40px;
+  }
+} 
+
+@media only screen and (max-width: 600px) {
+
+}
