--- a/app/assets/stylesheets/services/_design.scss
+++ b/app/assets/stylesheets/services/_design.scss
@@ -1,4 +1,4 @@
-.services-bigtext {
+.bisimpact-bigtext {
   color: #066579;
   text-align: center;
   font-size: 3em;
@@ -13,7 +13,7 @@
 // -------------media query breakpoints-------
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  .services-bigtext {
+  .bisimpact-bigtext {
     font-size: 1.4em;
   }
   .services-description {
@@ -23,7 +23,7 @@
 
 /* Small devices (portrait tablets and large phones, 600px and upto 768px) */
 @media only screen and (min-width: 600px) and (max-width: 768px){
-  .services-bigtext {
+  .bisimpact-bigtext {
     font-size: 2.5em;
   }
   .services-description {
@@ -33,7 +33,7 @@
 
 /* Medium devices (portrait-mode tablets, 768px and up) */
 @media screen and (min-width: 768px) and (orientation: portrait){
-  .services-bigtext {
+  .bisimpact-bigtext {
     font-size: 3em;
   }
   .services-description {
