--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -119,7 +119,7 @@
   <br>
   <br>
   <div class="container" id="contacts">
-      <h2 class="services-bigtext">Contact Us</h2>
+      <h2 class="bisimpact-bigtext">Contact Us</h2>
       <div class="pt-3">
         <form
           action="https://formspree.io/f/xvovqkpz"
