--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -31,7 +31,7 @@
 </div>
 <br>
 <br>
-<h1 class="services-bigtext">OUR UNDERSTANDING</h1>
+<h1 class="bisimpact-bigtext">OUR UNDERSTANDING</h1>
 <br>
 <div class="container">
   <div class="content">
@@ -42,7 +42,7 @@
   <br>
 </div>
 <br>
-<h1 class="services-bigtext">HOW WE CAN HELP</h1>
+<h1 class="bisimpact-bigtext">HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
   <div class="card" style="width: 18rem;">
