--- a/app/views/staff/show.html.erb
+++ b/app/views/staff/show.html.erb
@@ -10,7 +10,7 @@
         <h2 class="main-col"> <%= @staff.f_name %> <br> <%= @staff.l_name %></h2>
         <h3 class="job-title-text"> <%= @staff.job_title %></h3>
         <br>
-        <h5> "Quote of the year" </h5>
+        <h5> <%= @staff.briefdescription %> </h5>
       </div>
     </div>
   </div>
