--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <div class="my_app_container">
   <!-- ------------back to top--------- -->
-  <a href="#" class="back-to-top2"><i class="fas fa-chevron-up"></i></a>
-  <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
   <!-- ------- scrolling text----------------- -->
   <div class="text-wrap">
     <div class="latest-news">
@@ -11,7 +10,6 @@
       <p> Black Lives Matter. We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. 2020 has presented a whole set of new challenges; we wish everyone good health and normality in their daily lives. </p>
     </div>
   </div>
-
   <!-- ----------------banner --------->
 
   <div class="banner">
