--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,6 @@ html,body
   padding: 0px;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  // display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
@@ -144,8 +143,6 @@ html,body
 }
 .box-top-right:hover .box-top-right-image{
   transform: scale(1.1);
-  // background-size: contain;
-  // background-repeat: no-repeat;
 }
 .box-tr-padding {
   margin-bottom: 20px;
@@ -239,12 +236,35 @@ html,body
 }
 
 // ---------------------contacts div----------------------
+.contact-us-text {
+  margin-top: 30px;
+  margin-bottom: 0;
+  color: #066579;
+  font-size: 1.8em;
+}
+.contacts {
+  display: flex;
+  color: $main-color;
+  justify-content: space-around;
+  padding: 20px;
+  ul {
+    padding-left: 0;
+    list-style: none;
+    margin-bottom: 30px!important;
+    strong {
+      font-size: 24px;
+    }
+  }
+}
+.inline {
+  padding-top: 0!important;
+}
 .form {
   display: flex;
   flex-direction: column;
   border: 2px solid $main-color;
   border-radius: 10px;
-  // width: 35%;
+  width: 90%;
   margin: 0 auto;
   label {
     color: $main-color;
@@ -257,11 +277,11 @@ html,body
     border: 2px solid $main-color;
   }
   .text-area {
-    height: 130px;
     width: 80%;
     background-color: rgb(250,250,250);
     border-radius: 10px;
     border: 2px solid $main-color;
+    height: 80px;
   }
 }
 
@@ -269,21 +289,12 @@ html,body
   border:5px solid $main-color;
   border-radius: 5px;
   height:230px;
-  width: 410px;
+  margin-left: 160px;
 }
-.contacts {
-  display: flex;
-  color: $main-color;
-  justify-content: space-between;
-  padding: 20px;
-  ul {
-    padding-left: 0;
-    list-style: none;
-    strong {
-      font-size: 24px;
-    }
-  }
-}
+
+
+
+
 // ------back to top---------------------------
 .back-to-top {
 color: $main-color;
@@ -296,10 +307,98 @@ right: 20px;
 
 // -------------media query breakpoints-------
 
-/* Very smallest devices (phones, 440px and down) */ 
+
+/* Small devices (portrait tablets and large phones, 600px and upto 768px) */
+@media only screen and (min-width: 600px) and (max-width: 768px){
+  .banner-logo {
+    width: 300px;
+  }
+  .text-big {
+    padding: 20px;
+    h2 {
+      font-size: 2.5em;
+    }
+    p {
+      font-size: 1.2em;
+    }
+  }
+  .grid-box-long {
+    margin-bottom: 20px;
+  }
+  .box-bottom-left {
+    margin-top: 20px;
+  }
+  .box-bottom-left-image {
+    height: 100%;
+    object-fit: cover;
+  }
+  .grid-bottom {
+    margin-top: 20px;
+  }
+  .box-tr-padding {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+  }
+  .box-long-padding {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .grid-bottom-padding {
+    padding-right: 15px;
+  }
+  .text-inner-box {
+    width: 39%;
+    padding: 10px 0px;
+    font-size: 14.5px;
+  }
+  .text-inner-box2 {
+    width: 39%;
+    padding: 35px 0px;
+    font-size: 14.5px;
+  }
+  .text-inner {
+    font-size: 14.5px;
+  }
+  .text-inner-box3 {
+    font-size: 14.5px;
+  }
+  .back-to-top {
+    font-size: 2.9em;
+  }
+  .map-wrapper {
+    border:5px solid $main-color;
+    height:230px;
+    width: 410px;
+  }
+  .contacts {
+    display: block;
+    padding: 30px;
+    text-align: center;
+  }
+  .form {
+    width: 70%!important;
+  }
+}
+/* Very smallest devices (phones, 440px and down) */
 
 @media only screen and (max-width: 440px) {
-
+  .form {
+    width: 100%!important;
+    // margin: 0;
+    input {
+      width: 90%;
+    }
+    .text-area {
+      width: 90%;
+    }
+  }
+  .map-wrapper {
+    width: 280px;
+  }
+  .inline {
+    margin-bottom: 20px;
+  }
 }
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -380,91 +479,36 @@ right: 20px;
   .map-wrapper {
     border:5px solid $main-color;
     height:230px;
-    width: 310px;
     margin: 0 auto;
   }
   .contacts {
     display: block;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
+  }
+  .form {
+    width: 100%;
+    margin-top: 30px;
   }
 /* LANDSCAPE: Extra small devices (phones, 600px and down) */
 @media only screen and (max-device-height: 420px)
 {
-#myVideo {
-  height: 125vh;
-}
-}
-/* Small devices (portrait tablets and large phones, 600px and upto 768px) */
-@media only screen and (min-width: 600px) and (max-width: 768px){
-  .banner-logo {
-    width: 300px;
+  #myVideo {
+    height: 125vh;
   }
-  .text-big {
-    padding: 20px;
-    h2 {
-      font-size: 2.5em;
+  .form {
+    width: 100%;
+    input {
+      width: 90%;
     }
-    p {
-      font-size: 1.2em;
+    .text-area {
+      width: 90%;
     }
   }
-  .grid-box-long {
-    margin-bottom: 20px;
-  }
-  .box-bottom-left { 
-    margin-top: 20px;
-  }
-  .box-bottom-left-image {
-    height: 100%;
-    object-fit: cover;
-  }
-  .grid-bottom {
-    margin-top: 20px;
-  }
-  .box-tr-padding {
-    padding-left: 0px;
-    padding-right: 0px;
-    padding-top: 0px;
-  }
-  .box-long-padding {
-    padding-right: 0px;
-    padding-left: 0px;
-  }
-  .grid-bottom-padding {
-    padding-right: 15px;
-  }
-  .text-inner-box {
-    width: 39%;
-    padding: 10px 0px;
-    font-size: 14.5px;
-  }
-  .text-inner-box2 {
-    width: 39%;
-    padding: 35px 0px;
-    font-size: 14.5px;
-  }
-  .text-inner {
-    font-size: 14.5px;
-  }
-  .text-inner-box3 {
-    font-size: 14.5px;
-  }
-  .back-to-top {
-    font-size: 2.9em;
-  }
-  .map-wrapper {
-    border:5px solid $main-color;
-    height:230px;
-    width: 410px;
-    margin: 0 auto;
-  }
-  .contacts {
-    display: block;
-    padding: 20px;
-    text-align: center;
-  }
 }
+
+
+
 /* Medium devices (portrait-mode tablets, 768px and up) */
 @media screen and (min-width: 768px) and (orientation: portrait){
   .banner {
@@ -540,16 +584,15 @@ right: 20px;
     border:5px solid $main-color;
     height:230px;
     width: 410px;
-    margin: 0 auto;
+    margin-left: auto;
   }
   .contacts {
     display: block;
-    padding: 20px;
+    padding: 30px;
     text-align: center;
-    .inline {
-      margin: 0 auto;
-      padding-top: 50px;
-    }
+  }
+  .form {
+    width: 50%;
   }
 }
 
@@ -560,6 +603,7 @@ right: 20px;
   }
 }
 /* Large devices (laptops/desktops, 992px and up) */
+
 @media only screen and (min-width: 992px) {
   body {
     overflow-x: hidden;
@@ -605,20 +649,27 @@ right: 20px;
     border-radius: 5px;
     height:230px;
     width: 410px;
+    margin-left: 60px;
   }
   .contacts {
     display: flex;
     color: $main-color;
-    justify-content: space-between;
-    padding: 20px;
+    justify-content: space-around;
+    padding: 30px 70px;
     text-align: left;
-      .inline {
-        margin: 0 auto;
-        padding-top: 50px;
+      .map-wrapper {
+        margin-left: auto;
+        margin: auto 0;
+      }
+      .wrap-address {
+        margin: auto 0;
       }
   }
   .form {
-    width: 35%;
+    width: 100%;
+    margin-left: auto;
+    margin-top: 0;
+    margin-right: 75px;
   }
 }
 /*Internet Explorer specific-size */
