--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -153,7 +153,7 @@
 
         <!-- your other form fields go here -->
 
-        <button type="submit" class="btn blue contact-btn">Send</button>
+        <button type="submit" class="button-custom">Send</button>
       </form>
     </div>
 </div>
