--- a/app/assets/stylesheets/services/_transformation.scss
+++ b/app/assets/stylesheets/services/_transformation.scss
@@ -21,6 +21,11 @@
   padding: 4px 8px;
 }
 
+.blue:hover {
+  background-color: rgba(169, 130, 15, 0.8);
+  color: white;
+  border-radius: 10px;
+}
 @media only screen and (max-width: 800px) {
   .wraping-cards {
     flex-direction: column;
