--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -73,10 +73,8 @@
 <br>
 <h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path, class: "btn blue button-custom" %></h1>
 <br>
-
-<h2 class="text-center contact-us-text "> <u>Contact Us</u> </h2>
-
-
+<br>
+<h1 class="bisimpact-bigtext"> MAKE AN ENQUIRY </h1>
 <div  class="contacts">
 
     <div>
@@ -101,7 +99,7 @@
 
           <!-- your other form fields go here -->
 
-          <button type="submit" class="btn blue contact-btn">Send</button>
+          <button type="submit" class="btn blue">Send</button>
         </form>
       </div>
     </div>
