--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,29 +1,29 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
+  <!-- <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
+  </ol> -->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <!-- <img class="d-block w-100" src="China-Boats.jpg" alt="First slide"> -->
       <%= image_tag "China-Agriculture.jpg", class: "d-block w-100 " %>
     </div>
-    <div class="carousel-item">
+    <!-- <div class="carousel-item">
       <%= image_tag "Rwanda-Landscape.jpg", class: "d-block w-100 h-311" %>
     </div>
     <div class="carousel-item">
       <%= image_tag "Turkey-Cityscape.jpg", class: "d-block w-100" %>
-    </div>
+    </div> -->
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+  <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a> -->
 </div>
 <div class="blockquote blog-big">
 <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
@@ -38,7 +38,7 @@
   <br>
   </div>
   <br>
-  
+
 </div>
 <br>
 <div class="text-center">
