--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="my_app_container">
   <!-- ------------back to top--------- -->
-  <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
-
+  <a href="#" class="back-to-top2"><i class="fas fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
   <!-- ------- scrolling text----------------- -->
   <div class="text-wrap">
     <div class="latest-news">
@@ -116,16 +116,12 @@
     <%= image_tag "Tunisia-Skyline.jpg", class: "lg-photos" %>
   </div>
   <!-- -------------------contacts div ---------->
-
-
-
-  <h2 class="bisimpact-bigtext"> <u>Contact Us</u> </h2>
+  <h2 class="text-center bisimpact-bigtext mb-0 margin-contact-us">Contact Us </h2>
   <div  class="contacts" id="contacts">
-
 
     <div class="wrap-address">
       <ul class="inline">
-        <h4>Address</h4>
+        <h5>Address:</h5>
         <li>Wood Green</li>
         <li>London</li>
         <li>N22</li>
@@ -138,39 +134,28 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.418651478061!2d-0.11219868398350624!3d51.59721727964991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761be2449ab987%3A0x39f4a9a9893c4b68!2sWood%20Green%20tube%20station!5e0!3m2!1sen!2suk!4v1604842506483!5m2!1sen!2suk" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="map-width"></iframe>
     </div>
 
-    <div>
-      <div>
-
-  <br>
-  <br>
-  <div class="container" id="contacts">
-      <div class="pt-3">
-
-        <form
+    <div class="pt-3">
+      <form
         action="https://formspree.io/f/xvovqkpz"
         method="POST"
         class=" text-center form pt-4"
         >
-          <label>
-            Full Name:<br>
-            <input type="text" name="name" class="input">
-          </label>
-          <label>
-            Email:<br>
-            <input type="text" name="_replyto" class="input">
-          </label>
-          <label>
-            Your message:<br>
-            <textarea name="message" class="text-area"></textarea>
-          </label>
+        <label>
+          Full Name:<br>
+          <input type="text" name="name" class="input">
+        </label>
+        <label>
+          Email:<br>
+          <input type="text" name="_replyto" class="input">
+        </label>
+        <label>
+          Your message:<br>
+          <textarea name="message" class="text-area"></textarea>
+        </label>
 
-          <!-- your other form fields go here -->
+        <!-- your other form fields go here -->
 
-          <button type="submit" class="btn blue contact-btn">Send</button>
-        </form>
-      </div>
+        <button type="submit" class="btn blue contact-btn">Send</button>
+      </form>
     </div>
-
-  </div>
 </div>
-<!-- ------------------------------------ -->
