--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -114,7 +114,10 @@
     <%= image_tag "Tunisia-Skyline.jpg", class: "lg-photos" %>
   </div>
   <!-- -------------------contacts div ---------->
-  <h2 class="text-center bisimpact-bigtext mb-0 margin-contact-us">Contact Us </h2>
+  <div class="text-big" data-aos="fade-right">
+  <h2 class="text-center bisimpact-bigtext margin-contact-us"> Contact Us </h2>
+  <p class="invite-correspondance"> WE LOOK FORWARD TO YOUR CORRESPONDANCE </p>
+  </div>
   <div  class="contacts" id="contacts">
 
     <div class="wrap-address">
