bit of consistency

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,10 +115,10 @@
   </div>
   <!-- -------------------contacts div ---------->
   <div class="text-big" data-aos="fade-right">
-  <h2 class="text-center bisimpact-bigtext margin-contact-us"> Contact Us </h2>
+  <h2 class="text-center bisimpact-bigtext mt-0 margin-contact-us"> Contact Us </h2>
   <p class="invite-correspondance"> WE LOOK FORWARD TO YOUR CORRESPONDANCE </p>
   </div>
-  <div  class="contacts" id="contacts">
+  <div  class="contacts" id="contacts" data-aos="flip-left">
 
     <div class="wrap-address">
       <ul class="inline">
