synchornisation of animation

--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -31,17 +31,21 @@
 </div>
 <br>
 <br>
-<h1 class="bisimpact-bigtext">OUR UNDERSTANDING</h1>
-<br>
-<div class="container">
-  <div class="content">
-    <p class="services-description">Over the last 100 years, the way we as people and our institutions interact within the global economy has massively shifted. In many ways, we have seen the onset of a third-wave of globalisation. With that, there comes large trade-offs in decision-making. There is a complex mix of opportunities and risks, and a growing awareness that strategic choices must consider long(er) time horizons. Decision-makers really must consider their supply-chains and their impact on the environment; the services they provide and the precedents they set; the need to diversify to guard against exogeneous shocks but at the same time, the importance of generating prolonged employment opportunities for communities far and wide. </p>
+<%#//// Our understanding - top bit of page %>
+<div data-aos="flip-right">
+  <h1 class="bisimpact-bigtext">OUR UNDERSTANDING</h1>
+  <br>
+  <div class="container">
+    <div class="content">
+      <p class="services-description">Over the last 100 years, the way we as people and our institutions interact within the global economy has massively shifted. In many ways, we have seen the onset of a third-wave of globalisation. With that, there comes large trade-offs in decision-making. There is a complex mix of opportunities and risks, and a growing awareness that strategic choices must consider long(er) time horizons. Decision-makers really must consider their supply-chains and their impact on the environment; the services they provide and the precedents they set; the need to diversify to guard against exogeneous shocks but at the same time, the importance of generating prolonged employment opportunities for communities far and wide. </p>
+      <br>
+      <h3 class="services-description"><b>We help our partners to pivot their ways of working and make the best choices now.</b></h3>
+    </div>
     <br>
-    <h3 class="services-description"><b>We help our partners to pivot their ways of working and make the best choices now.</b></h3>
   </div>
   <br>
 </div>
-<br>
+
 <h1 class="bisimpact-bigtext">HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
