--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -31,19 +31,23 @@
 </div>
 <br>
 <br>
-<h1 class="bisimpact-bigtext">OUR UNDERSTANDING</h1>
-<br>
-<div class="container">
-  <div class="content">
-    <p class="services-description">Recent events have made the entire world think about the status-quo. Let us use the analogy of trees being cutdown in forests. Sometimes when an old tree is removed, there remains a gap. Soon however, new growth occurs - how institutions choose to respond to challenging circumstances is often an explanator of divergent outcomes.
-    <br><br>
-    BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to collective success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
+<%#//// Our understanding - top bit of page %>
+<div data-aos="flip-left">
+  <h1 class="bisimpact-bigtext">OUR UNDERSTANDING</h1>
+  <br>
+  <div class="container">
+    <div class="content">
+      <p class="services-description">Recent events have made the entire world think about the status-quo. Let us use the analogy of trees being cutdown in forests. Sometimes when an old tree is removed, there remains a gap. Soon however, new growth occurs - how institutions choose to respond to challenging circumstances is often an explanator of divergent outcomes.
+      <br><br>
+      BisImpact sees embracing change and transforming instiutions to be societal impact friendly/public good considering as central to collective success. Big institutions have seen a consolidation of their power; and as a result, small changes will have significant material impacts.</p>
+      <br>
+      <h3 class="services-description"><b>We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service and product delivery.</b></h3>
+    </div>
     <br>
-    <h3 class="services-description"><b>We work with institutions to identify existing processes that can rapidly be adapted to have wider positive social multipliers, and simultaneously ensure efficiency in service and product delivery.</b></h3>
   </div>
   <br>
 </div>
-<br>
+
 <h1 class="bisimpact-bigtext">HOW WE CAN HELP</h1>
 <br>
 <div class="wraping-cards d-flex ">
