--- a/app/views/pages/transformation.html.erb
+++ b/app/views/pages/transformation.html.erb
@@ -82,7 +82,7 @@
 <br>
 <h1 class="bisimpact-bigtext"> MAKE AN ENQUIRY </h1>
 <br>
-<div  class="contacts">
+<div  class="contacts-services">
   <div>
     <div>
       <form
