--- a/app/views/pages/design.html.erb
+++ b/app/views/pages/design.html.erb
@@ -78,9 +78,9 @@
 <h1 class="text-center"><%= link_to 'Meet Our Team', staff_index_path, class: "btn blue button-custom" %></h1>
 <br>
 <br>
-<h1 class="bisimpact-bigtext"> MAKE AN ENQUIRY </h1>
+<h1 class="bisimpact-bigtext mb-0"> MAKE AN ENQUIRY </h1>
 <br>
-<div  class="contacts">
+<div  class="contacts-services">
   <div>
     <div>
       <form
