--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -387,23 +387,6 @@ color: rgba(115, 197, 201, 1);
     width: 70%!important;
   }
 }
-/* Very smallest devices (phones, 440px and down) */
-
-@media only screen and (max-width: 440px) {
-  .form {
-    width: 100%!important;
-    // margin: 0;
-    input {
-      width: 90%;
-    }
-    .text-area {
-      width: 90%;
-    }
-  }
-  .inline {
-    margin-bottom: 20px;
-  }
-}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .latest-news {
@@ -486,10 +469,11 @@ color: rgba(115, 197, 201, 1);
   }
   .map-wrapper {
     margin: 0 auto;
+    margin-bottom: 30px;
   }
   .contacts {
     display: block;
-    padding: 30px;
+    padding: 30px 30px 0px 30px;
     text-align: center;
   }
   .form {
@@ -616,7 +600,7 @@ color: rgba(115, 197, 201, 1);
     object-fit: cover;
   }
   .grid-bottom-padding {
-    padding-right: 15px;
+    padding-right: 6px;
   }
   .text-inner-box {
     padding: 35px 10px 0px 10px;
@@ -642,6 +626,7 @@ color: rgba(115, 197, 201, 1);
   }
   .map-wrapper {
     margin-left: auto;
+    margin-bottom: 30px;
   }
   .contacts {
     display: block;
