--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,10 +115,12 @@
   </div>
   <!-- -------------------contacts div ---------->
   <div class="text-big" data-aos="fade-right">
-  <h2 class="text-center bisimpact-bigtext"> Contact Us </h2>
-  <p class="invite-correspondance"> WE LOOK FORWARD TO YOUR CORRESPONDANCE </p>
+    <h2 class="text-center bisimpact-bigtext"> Contact Us </h2>
+    <p class="invite-correspondance"> WE LOOK FORWARD TO YOUR CORRESPONDANCE </p>
   </div>
+
   <div  class="contacts" id="contacts" data-aos="flip-left">
+    <!-- --- address -->
     <div class="wrap-address">
       <ul class="inline">
         <li>Wood Green</li>
@@ -127,12 +129,11 @@
         <li>UK</li>
       </ul>
     </div>
-
     <!-- -------------google map------- -->
     <div class="map-wrapper">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.418651478061!2d-0.11219868398350624!3d51.59721727964991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761be2449ab987%3A0x39f4a9a9893c4b68!2sWood%20Green%20tube%20station!5e0!3m2!1sen!2suk!4v1604842506483!5m2!1sen!2suk" width="100%" height="220" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="map-width"></iframe>
     </div>
-
+    <!-- -------------form------- -->
     <div>
       <form
         action="https://formspree.io/f/xvovqkpz"
@@ -151,10 +152,9 @@
           Your message:<br>
           <textarea name="message" class="text-area"></textarea>
         </label>
-
         <!-- your other form fields go here -->
-
         <button type="submit" class="button-custom">Send</button>
       </form>
     </div>
+  </div>
 </div>
