updating the message

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -107,8 +107,9 @@
     <%= image_tag "Tunisia-Market.jpg", class: "lg-photos" %>
   </div>
   <div class="text-big" data-aos="fade-left">
-    <h2>Value</h2>
-    <p>WE HELP YOU CREATE IT.</p>
+    <h2>Building long-term relationships is at the heart of our business model; we place great emphasis in how we do things rather than simply doing.</h2>
+    <br>
+    <p> We always consider plausible benchmarks and pride ourselves on finding solutions in data-poor environments. Our working ethos constantly embraces feedback, and we guarantee enthusiasm and passion.</p>
   </div>
   <div class="photos-divs pic-4" data-aos="flip-right">
     <%= image_tag "Tunisia-Skyline.jpg", class: "lg-photos" %>
