--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,4 @@
+  
 html,body
 {
   width: 100%;
@@ -75,7 +76,7 @@ html,body
 
 }
 .banner-logo {
-  width: 400px;
+  width: 500px;
 }
 #opening-text{
   margin-top: 20px;
@@ -154,21 +155,15 @@ html,body
   background-position: center;
   position: relative;
   overflow: hidden;
-  object-fit: cover;
-  margin-top: 0px;
 }
 .box-bottom-left-image {
   width: 100%;
-  height: 290px;
-  object-fit: cover;
+  height: 291px;
   transition: all 0.5s ease-in-out;
   transform: scale(1);
 }
 .box-bottom-left:hover .box-bottom-left-image{
   transform: scale(1.1);
-}
-.box-bl-padding {
-  padding-right: 8px;
 }
 .grid-bottom {
   background-size: cover;
@@ -176,6 +171,7 @@ html,body
   position: relative;
   width: 100%;
   height: 290px;
+  overflow: hidden;
 }
 .grid-bottom-image {
   width: 100%;
@@ -188,7 +184,7 @@ html,body
   transform: scale(1.1);
 }
 .grid-bottom-padding {
-  padding-right: 7px;
+  padding-right: 15px;
 }
 .text-inner {
   background: rgba(6, 101, 121, 0.8);
@@ -227,7 +223,7 @@ html,body
   background: rgba(169, 130, 15, .8);
   width: 40%;
   text-align: center;
-  padding: 9px;
+  padding: 13px;
   color:  $second-color;
   position: absolute;
   top: 0;
@@ -251,28 +247,7 @@ html,body
   display: flex;
   color: $main-color;
   justify-content: space-around;
-  padding: 30px 70px;
-  padding-top: 0;
-  text-align: left;
-
-  .map-wrapper {
-    margin-left: auto;
-    margin: auto 0;
-    border-radius: 5px;
-    border: 2px solid #066579;
-    height: 230px;
-    width: 300px;
-  }
-  .wrap-address {
-    margin: auto 0;
-    font-size: 24px;
-  }
-  .form {
-    width: 50%;
-    margin-left: auto;
-    margin-top: 0;
-    margin-right: 120px;
-  }
+  padding: 20px;
   ul {
     // text-align: center;
     padding-left: 0;
@@ -323,12 +298,12 @@ html,body
   border: 2px solid $main-color;
   border-radius: 5px;
   height: 230px;
-  margin-left: 60px;
+  margin-left: 160px;
 }
 // ------back to top---------------------------
 .back-to-top {
 color: $main-color;
-font-size: 3.5em;
+font-size: 3em;
 z-index: 23;
 position: fixed;
 bottom: 25px;
@@ -337,57 +312,11 @@ right: 20px;
 .back-to-top:hover {
 color: rgba(115, 197, 201, 1);
 }
-.back-to-top2 {
-  font-size: 3.5em;
-}
 // -------------media query breakpoints-------
-
-@media only screen and (min-width: 992px) {
-  body {
-    overflow-x: hidden;
-  }
-}
-
-@media screen and (min-width: 992px) and (orientation: portrait) {
-  .banner {
-    height: 94vh;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .map-wrapper {
-    margin: 0 auto;
-    margin-left: auto;
-    margin-bottom: 30px;
-    
-  }
-  .contacts {
-    display: block;
-    padding: 30px;
-    text-align: center;
-  }
-  .form {
-    width: 50%;
-  }
-}
-@media screen and (min-width: 768px) and (orientation: portrait){
-  .banner {
-    height: 85vh;
-  }
-  .grid-bottom{
-    margin-top: 20px;
-  }
-}
-
-
-
-
-
-
-
 
 
 /* Small devices (portrait tablets and large phones, 600px and upto 768px) */
-@media only screen and (min-width: 600px) and (max-width: 768px) {
+@media only screen and (min-width: 600px) and (max-width: 768px){
   .banner-logo {
     width: 300px;
   }
@@ -460,7 +389,7 @@ color: rgba(115, 197, 201, 1);
   }
 }
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (min-width: 300px) and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .latest-news {
   width: 7rem;
   }
@@ -623,9 +552,174 @@ color: rgba(115, 197, 201, 1);
   }
 }
 /* Medium devices (portrait-mode tablets, 768px and up) */
-
+@media screen and (min-width: 768px) and (orientation: portrait){
+  .banner {
+    height: 85vh;
+  }
+  .grid-bottom{
+    margin-top: 20px;
+  }
+}
 /* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  .banner-logo {
+    width: 400px;
+  }
+  .text-big {
+    padding: 30px;
+    h2 {
+      font-size: 3.5em;
+    }
+    p {
+      font-size: 1.5em;
+    }
+  }
+  .grid-bottom {
+    margin-top: 20px;
+  }
+  .box-long-padding{
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .box-tr-padding{
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+  }
+  .box-bottom-left {
+    margin-top: 20px;
+    width: 100%;
+  }
+  .box-bl-padding {
+    padding-right: 15px;
+  }
+  .box-bottom-left-image {
+    height: 430px;
+    object-fit: cover;
+  }
+  .grid-bottom-padding {
+    padding-right: 6px;
+  }
+  .text-inner-box {
+    padding: 35px 10px 0px 10px;
+    width: 45%;
+    font-size: 16.5px;
+  }
+  .text-inner {
+    font-size: 16.5px;
+  }
+  .text-inner-box3 {
+    font-size: 16.5px;
+  }
+  .text-inner-box2 {
+    padding-top: 33px;
+    font-size: 16.5px;
+    width: 45%;
+  }
+  .back-to-top {
+    font-size: 3.2em;
+  }
+  .back-to-top2 {
+    font-size: 3.2em;
+  }
+  .map-wrapper {
+    margin-left: auto;
+    margin-bottom: 30px;
+  }
+  .contacts {
+    display: block;
+    padding: 30px;
+    text-align: center;
+  }
+  .form {
+    width: 50%;
+  }
+}
 
+/* Large devices (laptops/desktops - portrait mode, 992px and up) */
+@media screen and (min-width: 992px) and (orientation: portrait) {
+  .banner {
+    height: 94vh;
+  }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {
+  body {
+    overflow-x: hidden;
+  }
+  .banner-logo {
+    width: 400px;
+  }
+  .text-big {
+    padding: 60px;
+  }
+  .box-bottom-left {
+    margin-top: 0px;
+    object-fit: cover;
+  }
+  .box-bottom-left-image {
+    height: 290px;
+    object-fit: cover;
+  }
+  .box-bl-padding {
+    padding-right: 8px;
+  }
+  .grid-bottom {
+    margin-top: 0px;
+  }
+  .box-long-padding {
+    padding-right: 22px;
+    padding-left: 0px;
+  }
+  .box-bl-padding {
+    padding-top: 0px;
+  }
+  .grid-bottom-padding {
+    padding-right: 7px;
+  }
+  .text-inner-box {
+    padding: 9px;
+  }
+  .text-inner-box2 {
+    padding: 15px 5px 5px 5px;
+  }
+  .back-to-top {
+    font-size: 3.5em;
+  }
+  .back-to-top2 {
+    font-size: 3.5em;
+  }
+  .map-wrapper {
+    border-radius: 5px;
+    margin-left: 60px;
+  }
+  .contacts {
+    display: flex;
+    color: $main-color;
+    justify-content: space-around;
+    padding: 30px 70px;
+    padding-top: 0;
+    text-align: left;
+      .map-wrapper {
+        margin-left: auto;
+        margin: auto 0;
+      }
+      .wrap-address {
+        margin: auto 0;
+        font-size: 24px;
+      }
+  }
+  .form {
+    width: 100%;
+    margin-left: auto;
+    margin-top: 0;
+    margin-right: 120px;
+  }
+}
 /*Internet Explorer specific-size */
 @media all and (-ms-high-contrast: none),(-ms-high-contrast: active) {
   #myVideo {
@@ -638,6 +732,3 @@ color: rgba(115, 197, 201, 1);
   display: auto;
   }
 }
-
-// -----------------------------------------------------------------
-
