for blog picture

--- a/app/assets/stylesheets/blogs/_index.scss
+++ b/app/assets/stylesheets/blogs/_index.scss
@@ -9,7 +9,7 @@
 }
 .blog-picturetext {
   width: 40%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("China-Boats.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1606084820/China_Boats_tigyhi.jpg");
   // height: 300px;
   background-position: center;
   background-repeat: no-repeat;
