--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,7 +55,7 @@
         <div class="box-bottom-left">
           <%= cl_image_tag("https://res.cloudinary.com/dhoxwyrvn/image/upload/v1603925462/Emerging_City_k8lenn.jpg", class: "box-bottom-left-image") %>
           <div class="text-inner">
-            <p> <b> Trade</b> is central to economic growth. <b>Digital mechanisms</b> ever more crucial.</p>
+            <p> <b> Trade</b> is central to economic growth. <b>Digital mechanisms</b> are ever more crucial.</p>
           </div>
         </div>
       </div>
