credits to artist

--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -3,11 +3,13 @@
   <h2 class="bisimpact-bigtext">Courage and belief can yield unexpected outcomes</h2>
   <br>
   <h3 class="main-col">The best pieces of advice in life unlock your full potential</h3>
+  
   <br>
   <div class="videos" id="video">
 
       <iframe width="70%" height="515" src="https://www.youtube.com/embed/Ve2yUJTeRfc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+   <p> In partnership with Pete K - Kenopsia (Deep State Recordings) </p>
   <br>
   <%= link_to 'Home', root_path, class: "btn blue button-custom" %>
   <br>
