--- a/app/views/pages/sustainability.html.erb
+++ b/app/views/pages/sustainability.html.erb
@@ -52,24 +52,24 @@
   <div class="card" style="width: 18rem;">
   <%= image_tag "logo-blue.png", class: "card-img-top" %>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Service Being Developed</h5>
+    <p class="card-text">Our business is currently working hard to develop the best product offerings for our partners.</p>
   </div>
 </div>
 
 <div class="card" style="width: 18rem;">
   <%= image_tag "logo-blue.png", class: "card-img-top" %>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Service Being Developed</h5>
+    <p class="card-text">Our business is currently working hard to develop the best product offerings for our partners.</p>
   </div>
 </div>
 
 <div class="card" style="width: 18rem;">
   <%= image_tag "logo-blue.png", class: "card-img-top" %>
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <h5 class="card-title">Service Being Developed</h5>
+    <p class="card-text">Our business is currently working hard to develop the best product offerings for our partners.</p>
   </div>
 </div>
 </div>
