--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
       <p class="news">Latest News</p>
     </div>
     <div class="marquee">
-      <p> Black Lives Matter. We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. 2020 has presented a whole set of new challenges; we wish everyone good health and normality in their daily lives. </p>
+      <p> We are currently expanding our network of consultants. If you consider yourself to be a self-starter, but at the same time, someone who wants to make a genuine positive difference, do get in touch. 2020 has presented a whole set of new challenges; we wish everyone good health and normality in their daily lives. </p>
     </div>
   </div>
   <!-- ----------------banner --------->
