--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,11 +1,12 @@
-//   width: 100%;
-//   margin: 0px;
-//   padding: 0px;
-//   overflow-x: hidden;
-//   scroll-behavior: smooth;
-//   flex-direction: column;
-//   min-height: 100vh;
-// }
+
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .main {
   color: $main-color;
 }
@@ -257,7 +258,7 @@
       opacity: 0.8;
     }
   }
-  margin-bottom: 30px;
+  margin-bottom: 30px
 }
 .inline {
   padding-top: 0 !important;
@@ -295,6 +296,7 @@
 }
 
 .map-wrapper {
+
   border: 2px solid $main-color;
 
   border-radius: 5px;
@@ -391,6 +393,7 @@
     font-size: 2.9em;
   }
   .map-wrapper {
+
     border: 5px solid $main-color;
     height: 230px;
 
@@ -433,7 +436,7 @@
     width: calc(100% - 7rem);
   }
   .marquee p {
-    animation: marquee 50s linear infinite;
+  animation: marquee 50s linear infinite;
   }
   .banner {
     display: flex;
@@ -477,6 +480,7 @@
     font-size: 12px;
     padding: 40px 0px;
   }
+
 }
 .text-inner-box {
   width: 44%;
@@ -521,46 +525,46 @@
 }
 /* LANDSCAPE: Extra small devices (phones, 600px and down) */
 
-.text-inner-box {
-  width: 44%;
-  font-size: 12px;
-}
-.text-inner {
-  font-size: 12px;
-}
-.text-inner-box3 {
-  font-size: 12px;
-}
-.box-long-padding {
-  padding-right: 0px;
-  padding-left: 0px;
-}
-.box-tr-padding {
-  padding-left: 0px;
-  margin-bottom: 0px;
-}
-.grid-bottom-padding {
-  padding-right: 15px;
-}
-.back-to-top {
-  font-size: 2.6em;
-}
-.back-to-top2 {
-  font-size: 2.6em;
-}
-.map-wrapper {
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-.contacts {
-  display: block;
-  padding: 30px 30px 0px 30px;
-  text-align: center;
-}
-.form {
-  width: 100%;
-  margin-top: 30px;
-}
+  }.text-inner-box {
+    width: 44%;
+    font-size: 12px;
+  }
+  .text-inner {
+    font-size: 12px;
+  }
+  .text-inner-box3 {
+    font-size: 12px;
+  }
+  .box-long-padding{
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  .box-tr-padding{
+    padding-left: 0px;
+    margin-bottom: 0px;
+  }
+  .grid-bottom-padding {
+    padding-right: 15px;
+  }
+  .back-to-top {
+    font-size: 2.6em;
+  }
+  .back-to-top2 {
+    font-size: 2.6em;
+  }
+  .map-wrapper {
+    margin: 0 auto;
+    margin-bottom: 30px;
+  }
+  .contacts {
+    display: block;
+    padding: 30px 30px 0px 30px;
+    text-align: center;
+  }
+  .form {
+    width: 100%;
+    margin-top: 30px;
+  }
 /* LANDSCAPE: The smallest devices (phones, 420px and down) */
 
 @media only screen and (max-device-height: 420px) {
@@ -624,6 +628,7 @@
     font-size: 2.9em;
   }
   .map-wrapper {
+
     border: 5px solid $main-color;
     height: 230px;
     width: 410px;
@@ -712,6 +717,7 @@
     font-size: 3.2em;
   }
   .map-wrapper {
+
     border: 5px solid $main-color;
     height: 230px;
     width: 410px;
@@ -784,6 +790,7 @@
     font-size: 3.5em;
   }
   .map-wrapper {
+
     border: 5px solid $main-color;
     border-radius: 5px;
     height: 230px;
@@ -809,14 +816,15 @@
       margin: auto 0;
     }
 
-    .map-wrapper {
-      margin-left: auto;
-      margin: auto 0;
-    }
-    .wrap-address {
-      margin: auto 0;
-      font-size: 24px;
-    }
+      .map-wrapper {
+        margin-left: auto;
+        margin: auto 0;
+      }
+      .wrap-address {
+        margin: auto 0;
+        font-size: 24px;
+      }
+
   }
   .form {
     width: 100%;
@@ -837,6 +845,7 @@
   body {
     display: auto;
   }
+
 }
 
 // ----------cookies modal---------
@@ -958,3 +967,6 @@
   max-width: 100%;
   transition: color 200ms, background-color 200ms, border-color 200ms;
 }
+
+}
+
