added friendly_id gem

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="my_app_container">
   <!-- ------------back to top--------- -->
-  <a href="#" class="back-to-top"><i class="fas fa-angle-double-up"></i></a>
+  <a href="#" class="back-to-top"><i class="fas fa-chevron-up"></i></a>
+  <a href="#" class="back-to-top2"><i class="fas fa-chevron-up"></i></a>
   <!-- ------- scrolling text----------------- -->
   <div class="text-wrap">
     <div class="latest-news">
@@ -157,21 +158,5 @@
         <button type="submit" class="button-custom">Send</button>
       </form>
     </div>
-  </div>
-</div>
-<%# ---------cookies modal------ %>
-
-<div id="cookiemodal" class="cookie-modal">
-  <div class="cookie-modal-container">
-    <div class="cookie-modal-container-content">
-      <div class="cookie-modal-container-content-text">
-        <h6>By closing this banner, clicking a link or continuing to browse otherwise, you agree to the use of cookies.</h6>
-      </div>
-      <button id="cookieagree" class="cookie-modal-container-content-button">Accept</button>
-      <a href="https://www.bisimpact.com/privacy-policy" class="cookie-modal-container-content-link">
-        <span>Privacy policy</span>
-      </a>
-    </div>
-    <div id="cookieclose" class="cookie-modal-container-close"></div>
   </div>
 </div>
